--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
-{
+
+  {
+  "name": "Employee-Tracker",
+  "version": "1.0.0",
+  "description": "Employee Tracker",
+  "main": "index.js",
+   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+
+
   "dependencies": {
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
