--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
-
-  {
-  "name": "Employee-Tracker",
+{
+  "name": "employeeTracker",
   "version": "1.0.0",
   "description": "Employee Tracker",
   "main": "index.js",
-   "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-
-
   "dependencies": {
+    "console.log": "^0.1.3",
+    "console.table": "^0.10.0",
+    "errno": "^1.0.0",
+    "errno-codes": "^1.0.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "inquirer": "^9.2.2",
-    "mysql2":"^3.0.1"
+    "inquirer": "^8.0.0",
+    "mysql2": "^3.3.1",
+    "prisma": "^4.14.0",
+    "sequelize": "^6.31.1"
   }
 }
